@@ -1,3 +1,4 @@
+- implemented IOC-270 - Add OnDestroy method, symertical to OnCreate 
 - implemented IOC-268 - Hook that allows for filtering handlers during ResolveAll 
 - fixed IOC-267 - Register() on a System.ValueType (like an Int32 or an Enum) instance should throw an exception
 - fixed IOC-265 - In certain cases of cyclic dependencies debugger view times out because of stack overflow in MismatchedLifestyleDependencyViewBuilder 
